# decodeshare

./: .gitignore  BRANCH_EXPERIMENT_MAP.md  CAMERA_READY_CODE_INVENTORY.md  CITATION.cff  LICENSE  MANIFEST.md  README.md  VERIFY_MAIN_RESULTS.md  demo.py  demo_local.py  environment.yml  pyproject.toml  relatedwork.md  run_alpha_kmatch_old_full.sh  run_alpha_kmatch_sweep.sh  run_alpha_kmatch_sweep_generate.sh  run_disturb_cot_loto8.sh  run_disturb_cot_loto8_fc_reason.sh  run_disturb_cot_loto8_main.sh  run_disturb_cot_loto8_main_falcon.sh  run_disturb_cot_loto8_main_qwen.sh  run_exists.sh  run_mvp_pirate_qwen.sh  run_prefill_decode_nextsteps.sh  template_randomization_transfer_v4.py
Hype1/: collect_decode_acts.py  exp1_within_vs_mixed.py  exp2.5_subspace_convergence_enhanced.py  exp2_subspace_convergence.py  exp3_sensitivity_sweep.py  exp_2.75_subspace_convergence_distinguish.py  prove_sharedness_decode_fair.py  prove_sharedness_decode_full.py  run_00_collect_acts.sh  run_01_exp1_within_vs_mixed.sh  run_02_exp2_convergence.sh  run_03_exp3_sensitivity_llama.sh  run_exists.sh  shareness_task_curve.sh  summarize_h1_full_benchmark.py
brittleness/: mvp_projection_patch_pirate.py  mvp_projection_patch_pirate_v4.py  mvp_projection_patch_pirate_v5.py  run_steer_multibench_mix_layers.sh  steering_decodeshare_full.py  steering_vector_reliability_multibench_patch_falcon.py  steering_vector_reliability_multibench_patch_qwen.py  steering_vector_reliability_multibench_patch_qwen_multistep.py  steering_vector_reliability_multibench_patch_v3.py
camera_ready/: MOCK_TESTS.md  README.md
(+812 files in other folders)
