[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decodeshare"
version = "0.1.0"
description = "Reproducibility code for DecodeShare experiments."
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "accelerate>=0.28",
    "datasets>=2.18",
    "matplotlib>=3.8",
    "numpy>=1.26,<3",
    "pandas>=2.0",
    "protobuf>=4.25",
    "safetensors>=0.4",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "seaborn>=0.13",
    "sentencepiece>=0.1.99",
    "tiktoken>=0.7",
    "torch>=2.2",
    "tqdm>=4.66",
    "transformers>=4.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["decodeshare*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
